--- a/src/app/entities/User/components/users-list/users-list.component.html
+++ b/src/app/entities/User/components/users-list/users-list.component.html
@@ -7,6 +7,9 @@
   </ng-template>
 </div>
 
+<mat-paginator (page)="onPage($event)" [length]="(totalUsers$ | async)!" [pageSize]="6"/>
+
+
 <ng-template #table>
 <!--  <table mat-table [dataSource]="userService.users">-->
 
