--- a/src/app/pages/users-page/users-page.component.html
+++ b/src/app/pages/users-page/users-page.component.html
@@ -1,6 +1,6 @@
 <app-header/>
 <div class="container mx-auto pt-20">
-  <app-users-list [view]="view"/>
+  <app-users-list/>
 </div>
 <div (click)="modalService.open(Modals.CREATE_USER)" class="cursor-pointer flex justify-center items-center w-16 h-16 fixed right-5 bottom-5 rounded-full text-2xl bg-green-400 text-white" mat-ripple>
   +
