--- a/src/app/shared/ui/Modal/modal.component.html
+++ b/src/app/shared/ui/Modal/modal.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-center left-0 top-0 right-0 bottom-0 fixed z-50">
+<div class="flex items-center justify-center left-0 top-0 right-0 bottom-0 fixed z-[150]">
   <div (click)="modalService.close()" class="flex items-center justify-center bg-black/50 -z-1 left-0 top-0 right-0 bottom-0 fixed">
     <div (click)="stopPropagation($event)" class="p-5 rounded bg-white">
       <ng-content></ng-content>
