--- a/src/app/widgets/Header/components/header/header.component.html
+++ b/src/app/widgets/Header/components/header/header.component.html
@@ -1,6 +1,9 @@
 <div class="w-full h-[50px] fixed top-0 z-50 bg-neutral-300">
   <div class="flex h-full items-center mx-auto justify-between container">
     <div class="text-2xl">Angular Aton App</div>
-    <button *ngIf="isAuth" class="text-lg" mat-ripple (click)="onLogout()">Logout</button>
+    <div class="flex gap-10 items-center">
+      <app-view-switcher [view]="userView | async" [changeView]="onChangeView"/>
+      <button *ngIf="isAuth | async" class="text-lg" mat-ripple (click)="onLogout()">Logout</button>
+    </div>
   </div>
 </div>
