--- a/src/app/entities/User/components/add-user-modal/add-user-modal.component.html
+++ b/src/app/entities/User/components/add-user-modal/add-user-modal.component.html
@@ -14,6 +14,10 @@
         <mat-label>Avatar</mat-label>
         <input formControlName="avatar" matInput placeholder="Avatar">
       </mat-form-field>
+      <mat-form-field>
+        <mat-label>Email</mat-label>
+        <input formControlName="email" matInput placeholder="Email">
+      </mat-form-field>
       <div class="flex gap-4 justify-center">
         <button type="submit" [disabled]="!form.valid" mat-ripple class="h-[38px] px-4 py-2 bg-green-400 rounded font-medium text-white">
           <img *ngIf="isLoading$ | async; else text" class="h-full" src="assets/icons/loader.svg" alt="loader">
